Finished html for about me

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
+<!-- Index Page -->
 <!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/reset.css">
+        <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
         <title>Jonathan Mai's Portfolio</title>
     </head>
     <body>
-        
+        <div class="topnav">
+            <h1>Jonathan Mai</h1>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="header">About Me</div>
+        <div class="mainBody">
+            <!-- <img src="me.jpg"> -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor egestas nulla 
+                sed dictum. Nunc eu metus sit amet metus accumsan blandit vel non ipsum. Proin ornare sit 
+                amet lectus id commodo. Sed condimentum urna nec sagittis mollis. Quisque consectetur risus 
+                nec mauris elementum, id finibus leo posuere. In at rutrum ipsum. Integer a quam orci. 
+                Suspendisse potenti. Aliquam lorem lectus, bibendum a consectetur eget, mattis nec orci.
+                Nulla ex purus, volutpat in imperdiet a, efficitur eget ligula. Pellentesque sit amet turpis 
+                eget augue fermentum blandit. Sed pulvinar massa risus, id feugiat elit facilisis vel.
+                Proin imperdiet eleifend feugiat. Quisque at dignissim metus, at viverra ex. Pellentesque 
+                eget elit quis lorem consectetur pretium. Nulla in placerat arcu. Praesent sit amet nisl nec 
+                lorem luctus aliquam. Nulla maximus dolor quis viverra consectetur. In hac habitasse platea 
+                dictumst. Quisque semper blandit odio, sit amet blandit mauris sagittis ac. Vivamus tristique 
+                sed ex eget porttitor. Ut rhoncus ut turpis ac semper. Quisque lacinia sem eget feugiat 
+                convallis. Donec arcu risus, pellentesque nec dolor ac, scelerisque placerat nulla. Sed 
+                consectetur neque lorem, et viverra justo pretium sit amet. Sed faucibus rutrum sollicitudin.
+            </p>
+        </div>
     </body>
 </html>
