--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="header">About Me</div>
         <div class="mainBody">
             <!-- <img src="me.jpg"> -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor egestas nulla 
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor egestas nulla 
                 sed dictum. Nunc eu metus sit amet metus accumsan blandit vel non ipsum. Proin ornare sit 
                 amet lectus id commodo. Sed condimentum urna nec sagittis mollis. Quisque consectetur risus 
                 nec mauris elementum, id finibus leo posuere. In at rutrum ipsum. Integer a quam orci. 
