--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <title>Jonathan Mai's Portfolio</title>
     </head>
     <body>
-        <div class="topnav">
-            <h1>Jonathan Mai</h1>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
+        <div class="topnav" style="background: blue">
+            <h1 id="name">Jonathan Mai</h1>
+            <a href="index.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact</a>
         </div>
+        <br><br><br>
         <div class="header">About Me</div>
         <div class="mainBody">
             <!-- <img src="me.jpg"> -->
