Finished index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,16 @@
     </head>
     <body>
         <div class="topnav">
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
+            <span>Jonathan Mai</span>
+            <a href="contact.html" id="contact">Contact</a>
+            <a href="index.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
         </div>
+        <div class="contentWrapper">
+            
+        </div>
+        <div id="footer">
+                Copyright &#9426
+            </div>
     </body>
 </html>
