--- a/index.html
+++ b/index.html
@@ -7,32 +7,36 @@
         <title>Jonathan Mai's Portfolio</title>
     </head>
     <body>
-        <div class="topnav" style="background: blue">
-            <h1 id="name">Jonathan Mai</h1>
+        <div class="topnav">
+            <span>Jonathan Mai</span>
+            <a href="contact.html" id="contact">Contact</a>
             <a href="index.html" id="about">About</a>
             <a href="portfolio.html" id="portfolio">Portfolio</a>
-            <a href="contact.html" id="contact">Contact</a>
         </div>
-        <br><br><br>
-        <div class="header">About Me</div>
-        <div class="mainBody">
-            <!-- <img src="me.jpg"> -->
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor egestas nulla 
-                sed dictum. Nunc eu metus sit amet metus accumsan blandit vel non ipsum. Proin ornare sit 
-                amet lectus id commodo. Sed condimentum urna nec sagittis mollis. Quisque consectetur risus 
-                nec mauris elementum, id finibus leo posuere. In at rutrum ipsum. Integer a quam orci. 
-                Suspendisse potenti. Aliquam lorem lectus, bibendum a consectetur eget, mattis nec orci.
-                Nulla ex purus, volutpat in imperdiet a, efficitur eget ligula. Pellentesque sit amet turpis 
-                eget augue fermentum blandit. Sed pulvinar massa risus, id feugiat elit facilisis vel.
-                Proin imperdiet eleifend feugiat. Quisque at dignissim metus, at viverra ex. Pellentesque 
-                eget elit quis lorem consectetur pretium. Nulla in placerat arcu. Praesent sit amet nisl nec 
-                lorem luctus aliquam. Nulla maximus dolor quis viverra consectetur. In hac habitasse platea 
-                dictumst. Quisque semper blandit odio, sit amet blandit mauris sagittis ac. Vivamus tristique 
-                sed ex eget porttitor. Ut rhoncus ut turpis ac semper. Quisque lacinia sem eget feugiat 
-                convallis. Donec arcu risus, pellentesque nec dolor ac, scelerisque placerat nulla. Sed 
-                consectetur neque lorem, et viverra justo pretium sit amet. Sed faucibus rutrum sollicitudin.
-            </p>
+        <div class="contentWrapper">
+            <h1 class="contentHeader">About Me</h1>
+            <div class="mainBody">
+                <img src="assets/images/img.jpg">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor egestas nulla 
+                    sed dictum. Nunc eu metus sit amet metus accumsan blandit vel non ipsum. Proin ornare sit 
+                    amet lectus id commodo. Sed condimentum urna nec sagittis mollis. Quisque consectetur risus 
+                    nec mauris elementum, id finibus leo posuere. In at rutrum ipsum. Integer a quam orci. 
+                    Suspendisse potenti. Aliquam lorem lectus, bibendum a consectetur eget, mattis nec orci.
+                    Nulla ex purus, volutpat in imperdiet a, efficitur eget ligula. Pellentesque sit amet turpis 
+                    eget augue fermentum blandit. Sed pulvinar massa risus, id feugiat elit facilisis vel.
+                    Proin imperdiet eleifend feugiat. Quisque at dignissim metus, at viverra ex. Pellentesque 
+                    eget elit quis lorem consectetur pretium. Nulla in placerat arcu. Praesent sit amet nisl nec 
+                    lorem luctus aliquam. Nulla maximus dolor quis viverra consectetur. In hac habitasse platea 
+                    dictumst. Quisque semper blandit odio, sit amet blandit mauris sagittis ac. Vivamus tristique 
+                    sed ex eget porttitor. Ut rhoncus ut turpis ac semper. Quisque lacinia sem eget feugiat 
+                    convallis. Donec arcu risus, pellentesque nec dolor ac, scelerisque placerat nulla. Sed 
+                    consectetur neque lorem, et viverra justo pretium sit amet. Sed faucibus rutrum sollicitudin.
+                </p>
+            </div>
+        </div>
+        <div id="footer">
+            Copyright &#9426
         </div>
     </body>
 </html>
