--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     </head>
     <body>
         <div class="topnav">
-            <span>Jonathan Mai</span>
-            <a href="contact.html" id="contact">Contact</a>
-            <a href="index.html" id="about">About</a>
-            <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <div class="navContent">
+                <span>Jonathan Mai</span>
+                <a href="contact.html" id="contact">Contact</a>
+                <a href="portfolio.html" id="portfolio">Portfolio</a>
+                <a href="index.html" id="about">About</a>
+            </div>
         </div>
         <div class="contentWrapper">
-            <h1 class="contentHeader">About Me</h1>
+            <h2 class="contentHeader">About Me</h2>
             <div class="mainBody">
                 <img src="assets/images/img.jpg">
                 <p>
