Finished portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,44 @@
         </div>
         <div class="contentWrapper">
             <h2 class="contentHeader">Portfolio</h2>
+            <ul class="portfolio">
+                <li class="project">
+                    <a href="http://www.jmaiphotography.com">
+                        <img src="assets/images/photography.jpg">
+                        <h4 class="project-name">Photography Website</h4>
+                    </a>
+                </li>
+                <li class="project">
+                        <a href="https://github.com/ijonmai/SecretMessages">
+                            <img src="assets/images/steganography.jpg">
+                            <h4 class="project-name">Steganography</h4>
+                        </a>
+                </li>
+                <li class="project">
+                        <a href="https://github.com/ijonmai/DogePoll">
+                            <img src="assets/images/doge.jpg">
+                            <h4 class="project-name">Doge Poll</h4>
+                        </a>
+                </li>
+                <li class="project">
+                        <a href="#">
+                            <img src="assets/images/portfolio.jpg">
+                            <h4 class="project-name">Portfolio</h4>
+                        </a>
+                </li>
+                <li class="project">
+                        <a href="#">
+                            <img src="assets/images/portfolio.jpg">
+                            <h4 class="project-name">Portfolio</h4>
+                        </a>
+                </li>
+                <li class="project">
+                        <a href="#">
+                            <img src="assets/images/portfolio.jpg">
+                            <h4 class="project-name">Portfolio</h4>
+                        </a>
+                </li>
+            </ul>
         </div>
         <div id="footer">
                 Copyright &#9426
