--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
             <div class="mainBody">
                 <img src="assets/images/img.jpg">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur porttitor egestas nulla 
-                    sed dictum. Nunc eu metus sit amet metus accumsan blandit vel non ipsum. Proin ornare sit 
-                    amet lectus id commodo. Sed condimentum urna nec sagittis mollis. Quisque consectetur risus 
-                    nec mauris elementum, id finibus leo posuere. In at rutrum ipsum. Integer a quam orci. 
-                    Suspendisse potenti. Aliquam lorem lectus, bibendum a consectetur eget, mattis nec orci.
-                    Nulla ex purus, volutpat in imperdiet a, efficitur eget ligula. Pellentesque sit amet turpis 
-                    eget augue fermentum blandit. Sed pulvinar massa risus, id feugiat elit facilisis vel.
-                    Proin imperdiet eleifend feugiat. Quisque at dignissim metus, at viverra ex. Pellentesque 
-                    eget elit quis lorem consectetur pretium. Nulla in placerat arcu. Praesent sit amet nisl nec 
-                    lorem luctus aliquam. Nulla maximus dolor quis viverra consectetur. In hac habitasse platea 
-                    dictumst. Quisque semper blandit odio, sit amet blandit mauris sagittis ac. Vivamus tristique 
-                    sed ex eget porttitor. Ut rhoncus ut turpis ac semper. Quisque lacinia sem eget feugiat 
-                    convallis. Donec arcu risus, pellentesque nec dolor ac, scelerisque placerat nulla. Sed 
-                    consectetur neque lorem, et viverra justo pretium sit amet. Sed faucibus rutrum sollicitudin.
+                    My name is Jonathan Mai. I am a California State University, Fullerton
+                    Computer Science graduate of class 2017. I enjoy several things that has
+                    to do with coding, particularly being full stack web development. I am
+                    currently working at a start up company in the real estate industry as
+                    a software dev tester. I currently write several automation scripts to
+                    help run end to end testing. Although this isn't something that I originally
+                    intended to do, it has been a great experience and my end goal is to become
+                    a full stack engineer at the company. On my off time, I enjoy playing computer
+                    games and photography. I mainly play Overwatch but I am open to trying out
+                    other games. In the past, I have coded my own photography website to host
+                    my own images on AWS but I eventually plan to clean that up by applying a
+                    lot of the skills that I learn in the UCI Coding Bootcamp. If there are any
+                    suggestions to help improve my website, I am more than happy to hear them!
                 </p>
             </div>
         </div>
