SEO friendly titles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-        <title>Jonathan Mai's Portfolio</title>
+        <title>About Me | Jonathan Mai</title>
     </head>
     <body>
         <div class="topnav">
