--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-        <title>Contact Me!</title>
+        <title>Contact | Jonathan Mai</title>
     </head>
     <body>
         <div class="topnav">
