--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
         <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-        <title>Jonathan Mai's Projects</title>
+        <title>Projects | Jonathan Mai</title>
     </head>
     <body>
         <div class="topnav">
