--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     other games. In the past, I have coded my own photography website to host
                     my own images on AWS but I eventually plan to clean that up by applying a
                     lot of the skills that I learn in the UCI Coding Bootcamp. If there are any
-                    suggestions to help improve my website, I am more than happy to hear them! yolo
+                    suggestions to help improve my website, I am more than happy to hear them!
                 </p>
             </div>
         </div>
