--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
         <title>About Me | Jonathan Mai</title>
     </head>
     <body>
