Fixed photography link

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <h2 class="contentHeader">Portfolio</h2>
             <ul class="portfolio">
                 <li class="project">
-                    <a href="http://www.jmaiphotography.com">
+                    <a href="http://jmaiphotography.com">
                         <img src="assets/images/photography.jpg">
                         <h4 class="project-name">Photography Website</h4>
                     </a>
