Made changes to some styling

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 </p>
             </div>
         </div>
-        <div id="footer">
-            Copyright &#9426
+        <div id="footerContainer">
+            <div id="footer">
+                Copyright &#9426
+            </div>
         </div>
     </body>
 </html>
