--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <head>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <title>Contact | Jonathan Mai</title>
+        <title>Anthony's Tutorial</title>
     </head>
     <body>
         <div class="topnav">
