--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <h3>About Me</h3>
                 <hr>
                 <p style="font-family: Open Sans">I graduated from California State University, 
-                    Fullerton in 2017 as a computer science major and chose the full stack engineer career path. </p>
+                    Fullerton in 2017 as a computer science major and chose the full stack engineer career path.
+                    
+                </p>
             </div>
         </div>
     </div>
