--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <h3>About Me</h3>
                 <hr>
                 <p style="font-family: Open Sans">I graduated from California State University, 
-                    Fullerton in 2017 as a computer science major and chose the full stack engineer career path.
-                    
+                    Fullerton in 2017 as a computer science major and I am on the full stack engineer career path.
+                    I enjoy both front end work as well as back end. 
                 </p>
             </div>
         </div>
