--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <h2>Jonathan Mai</h2>
             <h1>Full Stack Engineer</h1>
             <p>
-                <a href="https://www.linkedin.com/in/hjm0809/" class="icons"><i class="fab fa-linkedin"></i></a><a href="https://www.github.com/hjmai/" class="icons"><i class="fab fa-github-square"></i></a>
+                <a href="https://www.linkedin.com/in/hjm0809/" class="icons">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.github.com/hjmai/" class="icons">
+                    <i class="fab fa-github-square"></i>
+                </a>
             </p>
             <a class="seeMore">View Profile <i class="fas fa-arrow-right"></i></a>
         </div>
@@ -30,11 +35,14 @@
         </div>
         <div class="right animated bounceInRight">
             <div class="about-me-text">
-                <h3>About Me</h3>
+                <h1>About Me</h1>
                 <hr>
                 <p style="font-family: Open Sans">I graduated from California State University, 
-                    Fullerton in 2017 as a computer science major and I am on the full stack engineer career path.
-                    I enjoy both front end work as well as back end. 
+                    Fullerton in 2017 as a computer science major and I am on the full stack 
+                    engineer career path. I enjoy working with a team and grab every opportunity
+                    where I can grow and learn. From my experience, I have worked with several 
+                    full stack technologies including Bootstrap, Materialize, JQuery, NodeJS, MySQL, 
+                    SequelizeJS, and MongoDB.
                 </p>
             </div>
         </div>
