--- a/index.html
+++ b/index.html
@@ -191,14 +191,13 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://hjmai.github.io/pokemonHangman/">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Workspace</h2>
-                  <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                  <h2>Pokemon Hangman</h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio-4.png" alt="">
             </a>
           </div>
           <div class="col-lg-6">
