--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h2 class="dropshadow">Jonathan Mai</h2>
+        <h2 class="dropshadow"><b>Jonathan Mai</b></h2>
         <h1 class="dropshadow">Full Stack Engineer</h1>
+        <br>
         <ul class="list-inline">
             <li class="list-inline-item">
               <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/hjm0809/">
@@ -98,33 +99,45 @@
         <div class="row animated fadeIn">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-                <i class="fas fa-code"></i>
+              <i class="fab fa-html5"></i>
             </span>
             <h4>
-              <strong>HTML / CSS</strong>
+              <strong>HTML</strong>
             </h4>
-            <p class="text-faded mb-0">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+              <span class="service-icon rounded-circle mx-auto mb-3">
+                <i class="fab fa-css3-alt"></i>
+              </span>
+              <h4>
+                <strong>CSS</strong>
+              </h4>
+            </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-js-square"></i>
+            </span>
+            <h4>
+              <strong>Javascript</strong>
+            </h4>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <img class="img-fluid" style="padding-bottom: 1vh; height: 65px;" src="./img/c-plus-plus-logo-filled.png">
+            </span>
+            <h4>
+              <strong>C++</strong>
+            </h4>
+          </div>
+        </div>
+        <div class="row animated fadeIn" style="padding-top: 3vh;">
+          <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-node-js"></i>
             </span>
             <h4>
               <strong>NodeJS</strong>
             </h4>
-            <p class="text-faded mb-0">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -133,28 +146,22 @@
             <h4>
               <strong>Databases</strong>
             </h4>
-            <p class="text-faded mb-0">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-              <i class="far fa-star"></i>
-            </p>
           </div>
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fas fa-code-branch"></i>
             </span>
             <h4>
               <strong>Version Control</strong>
             </h4>
-            <p class="text-faded mb-0">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="far fa-star"></i>
-            </p>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fab fa-react"></i>
+            </span>
+            <h4>
+              <strong>ReactJS</strong>
+            </h4>
           </div>
         </div>
       </div>
