added cool animations

--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
     <section class="content-section bg-light" id="about">
       <div class="container text-center">
         <div class="row animatedParent" data-appear-top-offset="-150">
-          <div class="col-lg-6 mx-auto animated bounceInLeft">
+          <div class="col-lg-4 mx-auto animated bounceInLeft">
             <img class="img-fluid profile" src="./img/profile.jpg"/>
           </div>
-          <div class="col-lg-6 animated bounceInRight" >
+          <div class="col-lg-8 animated bounceInRight" >
             <h2>About Me</h2>
             <hr>
             <p>
               I graduated from California State University, Fullerton in 2017 as a computer science major and 
-              I am on the full stack engineer career path. I enjoy working with a team and grab every opportunity 
-              where I can grow and learn. From my experience, I have worked with several full stack technologies 
-              including Bootstrap, Materialize, JQuery, NodeJS, MySQL, SequelizeJS, and MongoDB.
+              I am on the full stack engineer career path. I enjoy working with a team where I can learn, grow, and
+              help other's achieve their success. From my experience, I have worked with several full stack technologies 
+              including Bootstrap, Materialize, JQuery, NodeJS, MySQL, SequelizeJS, and MongoDB. My favorite development
+              stack at the moment is Handlebars and SequelizeJS but I am beginning to learn ReactJS and MongoDb and loving every lesson.
+              Whether it is handling server requests, fleshing out a beautiful front-end, creating a database back-end, or wiring up
+              all three, I am determined to bring your ideas to life.
             </p>
           </div>
         </div>
@@ -92,11 +95,11 @@
 
     <!-- Services -->
     <section class="content-section bg-primary text-white text-center" id="services">
-      <div class="container animatedParent" data-appear-top-offset="-150">
-        <div class="content-section-heading animated fadeIn">
+      <div class="container animatedParent">
+        <div class="content-section-heading">
           <h2 class="mb-5">Skills</h2>
         </div>
-        <div class="row animated fadeIn">
+        <div class="row animated fadeInLeft">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-html5"></i>
@@ -130,8 +133,8 @@
             </h4>
           </div>
         </div>
-        <div class="row animated fadeIn" style="padding-top: 3vh;">
-          <div class="col-lg-3 col-md-6">
+        <div class="row animated fadeInRight" style="padding-top: 3vh;">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-node-js"></i>
             </span>
@@ -139,7 +142,7 @@
               <strong>NodeJS</strong>
             </h4>
           </div>
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+          <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
                 <i class="fas fa-database"></i>
             </span>
@@ -168,14 +171,14 @@
     </section>
 
     <!-- Portfolio -->
-    <section class="content-section animatedParent" id="portfolio" data-appear-top-offset="-150">
-      <div class="container animated fadeIn">
-        <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">My Top Projects</h2>
+    <section class="content-section" id="portfolio">
+      <div class="container">
+        <div class="content-section-heading text-center animatedParent" data-appear-top-offset="-150">
+          <h3 class="text-secondary mb-0 animated fadeIn">Portfolio</h3>
+          <h2 class="mb-5 animated fadeIn">My Top Projects</h2>
         </div>
-        <div class="row no-gutters">
-          <div class="col-lg-6">
+        <div class="row no-gutters animatedParent" data-sequence="500" data-appear-top-offset="-500">
+          <div class="col-lg-6 animated fadeIn" data-id="1">
             <a class="portfolio-item" href="https://github.com/hjmai/Project2">
               <span class="caption">
                 <span class="caption-content">
@@ -186,7 +189,7 @@
               <img class="img-fluid" src="img/portfolio-1.png" alt="">
             </a>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 animated fadeIn" data-id="2">
             <a class="portfolio-item" href="http://jmaiphotography.com/">
               <span class="caption">
                 <span class="caption-content">
@@ -197,7 +200,7 @@
               <img class="img-fluid" src="img/portfolio-3.png" alt="">
             </a>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 animated fadeIn" data-id="3">
             <a class="portfolio-item" href="https://hjmai.github.io/pokemonHangman/">
               <span class="caption">
                 <span class="caption-content">
@@ -207,7 +210,7 @@
               <img class="img-fluid" src="img/portfolio-4.png" alt="">
             </a>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 animated fadeIn" data-id="4">
             <a class="portfolio-item" href="https://github.com/hjmai/BootcampProject1">
               <span class="caption">
                 <span class="caption-content">
