added offset for skills

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
     <!-- Services -->
     <section class="content-section bg-primary text-white text-center" id="services">
-      <div class="container animatedParent">
+      <div class="container animatedParent" data-appear-top-offset="-300">
         <div class="content-section-heading">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5 animated fadeIn">Skills</h2>
         </div>
         <div class="row animated fadeInLeft">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
