last portfolio added

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   <p class="mb-0">Group Project Reddit Clone</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-1.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-1.png" alt="">
             </a>
           </div>
           <div class="col-lg-6 animated fadeIn" data-id="2">
@@ -197,7 +197,7 @@
                   <p class="mb-0">My own photography website where I host my images!</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-3.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-3.png" alt="">
             </a>
           </div>
           <div class="col-lg-6 animated fadeIn" data-id="3">
@@ -207,7 +207,7 @@
                   <h2>Pokemon Hangman</h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-4.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-4.png" alt="">
             </a>
           </div>
           <div class="col-lg-6 animated fadeIn" data-id="4">
@@ -218,9 +218,19 @@
                   <p class="mb-0">Hearthstone Deck Builder</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-2.png" alt="">
+              <img class="img-fluid" src="./img/portfolio-2.png" alt="">
             </a>
           </div>
+          <div class="col-lg-12 animated fadeIn text-center" data-id="5">
+              <a class="portfolio-item" href="https://github.com/hjmai/">
+                <span class="caption">
+                  <span class="caption-content">
+                    <p>See all my projects here</p>
+                  </span>
+                </span>
+                <img class="img-fluid" src="./img/portfolio-5.png" alt="">
+              </a>
+            </div>
         </div>
       </div>
     </section>
