changed services to skills

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </section>
 
     <!-- Services -->
-    <section class="content-section bg-primary text-white text-center" id="services">
+    <section class="content-section bg-primary text-white text-center" id="skills">
       <div class="container animatedParent" data-appear-top-offset="-300">
         <div class="content-section-heading">
           <h2 class="mb-5 animated fadeIn">Skills</h2>
