fixed side menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="js-scroll-trigger" href="#about">About Me</a>
         </li>
         <li class="sidebar-nav-item">
-          <a class="js-scroll-trigger" href="#services">Skills</a>
+          <a class="js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#portfolio">Projects</a>
