--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/stylish-portfolio.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/animations.css">
 
   </head>
 
@@ -49,8 +48,8 @@
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
-        <h2 class="dropshadow"><b>Jonathan Mai</b></h2>
-        <h1 class="dropshadow">Full Stack Engineer</h1>
+        <h2><b>Jonathan Mai</b></h2>
+        <h1>Full Stack Engineer</h1>
         <br>
         <ul class="list-inline">
             <li class="list-inline-item">
@@ -72,11 +71,11 @@
     <!-- About -->
     <section class="content-section bg-light" id="about">
       <div class="container text-center">
-        <div class="row animatedParent" data-appear-top-offset="-150">
-          <div class="col-lg-4 mx-auto animated bounceInLeft">
+        <div class="row">
+          <div class="col-lg-4 mx-auto  ">
             <img class="img-fluid profile" src="./img/profile.jpg"/>
           </div>
-          <div class="col-lg-8 animated bounceInRight" >
+          <div class="col-lg-8  " >
             <h2>About Me</h2>
             <hr>
             <p>
@@ -95,11 +94,11 @@
 
     <!-- Services -->
     <section class="content-section bg-primary text-white text-center" id="skills">
-      <div class="container animatedParent" data-appear-top-offset="-150">
+      <div class="container">
         <div class="content-section-heading">
-          <h2 class="mb-5 animated fadeIn">Skills</h2>
+          <h2 class="mb-5">Skills</h2>
         </div>
-        <div class="row animated fadeInLeft">
+        <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-html5"></i>
@@ -133,7 +132,7 @@
             </h4>
           </div>
         </div>
-        <div class="row animated fadeInRight" style="padding-top: 3vh;">
+        <div class="row" style="padding-top: 3vh;">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="fab fa-node-js"></i>
@@ -173,12 +172,12 @@
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
       <div class="container">
-        <div class="content-section-heading text-center animatedParent" data-appear-top-offset="-150">
-          <h3 class="text-secondary mb-0 animated fadeIn">Portfolio</h3>
-          <h2 class="mb-5 animated fadeIn">My Top Projects</h2>
+        <div class="content-section-heading text-center">
+          <h3 class="text-secondary mb-0  ">Portfolio</h3>
+          <h2 class="mb-5  ">My Top Projects</h2>
         </div>
-        <div class="row no-gutters animatedParent" data-sequence="500" data-appear-top-offset="-300">
-          <div class="col-lg-6 animated fadeIn" data-id="1">
+        <div class="row no-gutters">
+          <div class="col-lg-6">
             <a class="portfolio-item" href="https://github.com/hjmai/Project2">
               <span class="caption">
                 <span class="caption-content">
@@ -189,7 +188,7 @@
               <img class="img-fluid" src="./img/portfolio-1.png" alt="">
             </a>
           </div>
-          <div class="col-lg-6 animated fadeIn" data-id="2">
+          <div class="col-lg-6">
             <a class="portfolio-item" href="http://jmaiphotography.com/">
               <span class="caption">
                 <span class="caption-content">
@@ -200,7 +199,7 @@
               <img class="img-fluid" src="./img/portfolio-3.png" alt="">
             </a>
           </div>
-          <div class="col-lg-6 animated fadeIn" data-id="3">
+          <div class="col-lg-6">
             <a class="portfolio-item" href="https://hjmai.github.io/pokemonHangman/">
               <span class="caption">
                 <span class="caption-content">
@@ -210,7 +209,7 @@
               <img class="img-fluid" src="./img/portfolio-4.png" alt="">
             </a>
           </div>
-          <div class="col-lg-6 animated fadeIn" data-id="4">
+          <div class="col-lg-6">
             <a class="portfolio-item" href="https://github.com/hjmai/BootcampProject1">
               <span class="caption">
                 <span class="caption-content">
@@ -221,7 +220,7 @@
               <img class="img-fluid" src="./img/portfolio-2.png" alt="">
             </a>
           </div>
-          <div class="col-lg-12 animated fadeIn text-center" data-id="5">
+          <div class="col-lg-12 text-center">
               <a class="portfolio-item" href="https://github.com/hjmai/">
                 <span class="caption">
                   <span class="caption-content">
@@ -250,7 +249,6 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/animate-it.js"></script>
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
