--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section class="content-section bg-primary text-white text-center" id="skills">
       <div class="container">
         <div class="content-section-heading">
-          <h2 class="mb-5" data-aos="fade-in" data-aos-duration="500" data-aos-anchor-placement="center-bottom" data-aos-anchor="#skills">Skills</h2>
+          <h2 class="mb-5" data-aos="fade-in" data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-anchor="#skills">Skills</h2>
         </div>
         <div class="row" data-aos="fade-left" data-aos-duration="500" data-aos-anchor-placement="top-center" data-aos-anchor="#skills">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
